@@ -3,11 +3,6 @@
   "uniques": 18,
   "clones": [
     {
-      "timestamp": "2025-01-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-01-27T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -36,6 +31,11 @@
       "timestamp": "2025-02-03T00:00:00Z",
       "count": 14,
       "uniques": 11
+    },
+    {
+      "timestamp": "2025-02-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
